src/test/MethodReferences2/MethodReferences2.expected
error: MethodReferences2.panda:32:10: 'Test' has more than one method named 'c', specify parameter types to disambiguate
error: MethodReferences2.panda:33:10: 'Test.d' is abstract
error: MethodReferences2.panda:35:10: 'TestInterface.f' is abstract
3 errors
