src/test/MethodReferences2/MethodReferences2.panda
@abstract
class Test {
    @class
    function a():String {
        return "I'm 'a'!"
    }

    method b():(String, String) {
        return ("I'm", "'b'!")
    }

    function c(a:()=>(String)):String {
        return a() + "... as interpreted by 'c1'!"
    }

    @class
    method c(s:String):String {
        return "And another variant of 'c' says '\{s}'!"
    }

    @abstract
    method d(s:String):String

    @external
    method e(s:String):String
}

interface TestInterface {
    method f()    
}

def c := Test.c
def d := Test.d
def e := Test.e
def f := TestInterface.f